--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="nav-links">
         <a href="index.html">Home</a>
         <a href="jobs.html">Jobs</a>
+<a href="dashboard.html">Dashboard</a>   
         <a href="login.html">Login</a>
         <a href="signup.html">Sign Up</a>
     </div>
@@ -53,4 +54,5 @@
 </div>
 
 </body>
+
 </html>
