--- a/dashboard.html
+++ b/dashboard.html
@@ -2,30 +2,104 @@
 <html>
 <head>
     <title>Dashboard</title>
+
+    <!-- Connect External CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+<!-- ===== NAVBAR ===== -->
 <div class="navbar">
-    <div class="logo">StudentJobs</div>
+    <div class="logo">Dashboard</div>
+    <div class="nav-links">
+        <a href="index.html">Home</a>
+        <a href="jobs.html">Jobs</a>
+        <a href="login.html">Logout</a>
+    </div>
 </div>
 
+<!-- ===== MAIN DASHBOARD SECTION ===== -->
 <div class="section">
-    <h2>Welcome!!👋</h2>
 
+    <h2>User Dashboard</h2>
+    <p style="margin-bottom:40px; color:#d1d5db;">
+        Track your applications and saved opportunities here.
+    </p>
+
+    <!-- SUMMARY CARDS -->
     <div class="job-container">
+
         <div class="job-card">
-            <h3>Applied Jobs</h3>
-            <p>Software Developer</p>
+            <h3>Total Applications</h3>
+            <p>05 Applications</p>
         </div>
 
         <div class="job-card">
             <h3>Saved Jobs</h3>
-            <p>Data Analyst</p>
+            <p>03 Saved</p>
         </div>
+
+        <div class="job-card">
+            <h3>Profile Status</h3>
+            <p>80% Completed</p>
+        </div>
+
     </div>
+
+</div>
+
+<!-- ===== APPLIED JOBS ===== -->
+<div class="section">
+
+    <h2>Applied Jobs</h2>
+
+    <div class="job-container">
+
+        <div class="job-card">
+            <h3>Frontend Developer</h3>
+            <p>Location: Kolkata</p>
+            <p>Status: Under Review</p>
+            <button>View Details</button>
+        </div>
+
+        <div class="job-card">
+            <h3>Data Analyst</h3>
+            <p>Location: Mumbai</p>
+            <p>Status: Shortlisted</p>
+            <button>View Details</button>
+        </div>
+
+    </div>
+
+</div>
+
+<!-- ===== SAVED JOBS ===== -->
+<div class="section">
+
+    <h2>Saved Jobs</h2>
+
+    <div class="job-container">
+
+        <div class="job-card">
+            <h3>Marketing Executive</h3>
+            <p>Location: Delhi</p>
+            <button>Apply Now</button>
+        </div>
+
+        <div class="job-card">
+            <h3>UI/UX Designer</h3>
+            <p>Location: Bangalore</p>
+            <button>Apply Now</button>
+        </div>
+
+    </div>
+
+</div>
+
+<!-- ===== FOOTER ===== -->
+<div class="footer">
+    © 2026 | All Rights Reserved
 </div>
 
 </body>
-
 </html>
